fix animation and dropdown header spacing
https://coveord.atlassian.net/browse/JSUI-1083

--- a/sass/_ResponsiveComponents.scss
+++ b/sass/_ResponsiveComponents.scss
@@ -45,6 +45,10 @@
     @include display(inline-flex);
     @include flex-wrap(nowrap);
     @include justify-content(flex-end);
+
+    a {
+      margin-right: 8px;
+    }
   }
 }
 
