--- a/sass/_ResponsiveFacets.scss
+++ b/sass/_ResponsiveFacets.scss
@@ -6,7 +6,6 @@
   }
 
   .coveo-facet-dropdown-header {
-    margin: 0 8px 0 8px;
     @include order(2);
     @include defaultRoundedBorder();
     background-color: white;
@@ -15,6 +14,7 @@
       z-index: 20;
     }
   }
+
   .coveo-facet-column.coveo-facet-dropdown-content {
     overflow-y: scroll;
     max-height: 600px;
